--- a/css/main.css
+++ b/css/main.css
@@ -503,6 +503,9 @@ to {
 	padding-bottom: 15px;
 }
 
+#mc_embed_signup input.email { color: #000
+}
+
 
 
 /*==========9. CUSTOM MEDIA QUERIES==============*/
